--- a/.github/workflows/ch.yaml
+++ b/.github/workflows/ch.yaml
@@ -22,7 +22,16 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
-      - name: Build
-        run: find . -name "*.html" -print | xargs sed -i s/href=\"\/notes/href=\"hoge\/notes/
-      - name: bbb
-        run: cat index.html
+      - name: Run read-yaml action
+        id: yaml-data
+        uses: jbutcher5/read-yaml@main      # You may wish to replace main with a version tag such as '1.6' etc.
+        with:
+          file: './config.yaml'          # File to read from
+          key-path: '["note", "vault_repository"]' # Access the runs key then the using key and retuns the value.
+
+      - name: Display read-yaml output
+        run: echo "${{ steps.yaml-data.outputs.data }}"
+#      - name: Build
+#        run: find . -name "*.html" -print | xargs sed -i s/href=\"\/notes/href=\"hoge\/notes/
+#      - name: bbb
+#        run: cat index.html
