--- a/.github/workflows/ch.yaml
+++ b/.github/workflows/ch.yaml
@@ -26,7 +26,7 @@ jobs:
         id: yaml-data
         uses: jbutcher5/read-yaml@main      # You may wish to replace main with a version tag such as '1.6' etc.
         with:
-          file: './config.yaml'          # File to read from
+          file: '/config.yaml'          # File to read from
           key-path: '["note", "vault_repository"]' # Access the runs key then the using key and retuns the value.
 
       - name: Display read-yaml output
